--- a/src/common/style/global.css
+++ b/src/common/style/global.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600&display=swap");
 
 html,
 body {
@@ -10,6 +11,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
+  font-family: "Gabarito", sans-serif;
 }
 
 * {
@@ -17,7 +19,8 @@ body {
 }
 
 a {
-  color: #0070f3;
+  color: #333;
+  cursor: pointer;
   text-decoration: none;
 }
 
